Fix heading change's effect on xui-sectionheading
When the heading element selector had margin:0 removed it added extra margins to the sectionheadings. This fixes that change.

--- a/src/sass/objects/_sections.scss
+++ b/src/sass/objects/_sections.scss
@@ -5,6 +5,7 @@
 	background-color: $xui-color-background;
 	border-bottom: $xui-divider-standard;
 	border-top: $xui-divider-standard;
+	margin: 0;
 	text-align: left;
 }
 
